Fixed alignment issues in the clock module

--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -68,8 +68,4 @@
   .md\:right-reset {
     right: auto;
   }
-
-  .md\:ml-280px {
-    margin-left: 280px;
-  }
 }
